feat: add editable watch history
